<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

 

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index_name"
        android:textSize="20sp" />

    <ImageView 
        android:id="@+id/ImageView1"
        android:layout_width="250dp"
        android:layout_height="352dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/app_name"
        android:maxHeight="300dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/button1"
        style="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/index_new_travel_begin" />

</LinearLayout>